<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="338dp"
        android:layout_height="200dp"
        android:src="@drawable/quiz"></ImageView>


    <TextView
        android:id="@+id/text_view_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Pergunta_completa"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botao_verdade"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/verdade_texto"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            ></Button>

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:id="@+id/botao_falso"
            android:text="@string/falso_texto"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black">
        </Button>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/voltar_botao"
            android:layout_width="80dp"
            android:layout_height="69dp"
            android:contentDescription="@string/voltar_texto"
            android:rotationX="-4"
            android:src="@drawable/voltar"
            android:background="@color/white"

            >
        </ImageButton>

        <ImageButton
            android:id="@+id/proximo_botao"
            android:layout_width="80dp"
            android:layout_height="69dp"
            android:contentDescription="@string/proximo_texto"
            android:rotationX="-4"
            android:src="@drawable/proximo"
            android:background="@color/white"
            >
        </ImageButton>



    </LinearLayout>


</LinearLayout>